# INF2004_EmbeddedSystems

./: CMakeLists.txt  README.MD  car_movement_diagram.drawio  htmldata.c  main.c
drivers/: CMakeLists.txt
drivers/encoder/: CMakeLists.txt  encoder.c
drivers/magnetometer/: CMakeLists.txt  magnetometer.c
drivers/motor/: CMakeLists.txt  motor.c
drivers/ultrasonic/: CMakeLists.txt  ultrasonic.c
html_files/: index.shtml
include/: FreeRTOSConfig.h  barcode.h  cgi.h  common.h  grid.h  infrared.h  linkedlist.h  magnetometer.h  main.h  mapping.h  motor.h  movement.h  node.h  pathfinding.h  sorting.h  ssi.h  ultrasonic.h  wheel_encoder.h
mapping_C/: common.h  grid.h  linkedlist.h  main.c  mapping.h  node.h  pathfinding.h  sorting.h
src/: barcode.c  barcode_recognition.c  grid.c  infrared.c  interrupt.c  linkedlist.c  magnetometer.c  main.c  mapping.c  motor.c  movement_control.c  node.c  pathfinding.c  sorting.c  ultrasonic.c  user_interface.c  wheel_encoder.c
